--- a/web/WEB-INF/template/selectTag.vm
+++ b/web/WEB-INF/template/selectTag.vm
@@ -1,5 +1,5 @@
 #if($options)
-<select name="$name"#if ( $clazz ) class="$clazz"#end#if ( $onchange ) onchange="$onchange"#end#if ( $!{disabled} == 'Y' ) disabled#end#if ( $tabindex ) tabindex="$tabindex"#end#if ($id) id="$id"#end#if($style) style="$style"#end>
+<select name="$name"#if ( $clazz ) class="$clazz"#end#if ( $onchange ) onchange="$onchange"#end#if ( $!{disabled} == 'Y' ) disabled#end#if ( $tabindex ) tabindex="$tabindex"#end#if ($id) id="$id"#end#if($style) style="$style"#end#if($required) required="$required"#end>
 #if($defaultValue)
     <option value="">$defaultValue</option>
 #end
